2008-01-31  Zoltan Varga  <vargaz@gmail.com>

	* mini.c: Fix a couple more soft-float issues.

	* helpers.c (mono_disassemble_code): Fix disassembly on ARM.

	* mini-amd64.c (peephole_pass): Use IXOR instead of LXOR for zeroing a register to
	avoid a REX prefix.

2008-01-30  Zoltan Varga  <vargaz@gmail.com>

	* exceptions-x86.c (mono_arch_find_jit_info): Fix stack unwinding when an
	exception happens while compiling a virtual method.

2008-01-29  Zoltan Varga  <vargaz@gmail.com>

	* mini-sparc.c (mono_arch_emit_epilog): Fix folding of negative return values.
	
	* mini-sparc.c: Fix build.

	* mini-sparc.c (get_call_info): Add support for generic sharing.

	* mini-exceptions.c: Add a FIXME.

2008-01-27  Zoltan Varga  <vargaz@gmail.com>

	* mini-exceptions.c (mono_handle_exception_internal): Remove the old style
	altstack handling code.

	* mini-s390.c (mono_arch_emit_exceptions): Really fix a warning.
	
	* mini-s390.c (mono_arch_emit_exceptions): Fix a warning.

	* mini-s390.c: Add support for generic sharing.

	* mini-exceptions.c (ves_icall_System_Security_SecurityFrame_GetSecurityFrame): 
	Fix CAS on s390.
	(ves_icall_System_Security_SecurityFrame_GetSecurityStack): Ditto.

	* mini-s390x.c (mono_arch_emit_exceptions): Fix a warning.

	* mini-s390x.c: Add support for generic sharing.
	
	* mini-exceptions.c (ves_icall_System_Security_SecurityFrame_GetSecurityFrame): 
	Fix CAS on ia64.
	(ves_icall_System_Security_SecurityFrame_GetSecurityStack): Ditto.

	* mini-s390x.c: Use is_imm16 instead of is_uimm16 when checking whenever s390_aghi
	can be used since it takes a 16 bit signed immediate.

	* inssel-s390x.brg: Fix OP_SETRET.

	* mini-s390x.c (mono_arch_output_basic_block): Fix OP_BREAK.

	* mini-codegen.c (mono_opcode_to_cond): Fix a warning.

	* mini-s390x.c cpu-s390x.md: Implement sext.i4 properly by sign extension.

	* mini.c (mono_create_delegate_trampoline): Don't use mono_create_ftpntr here.
